@@ -2,6 +2,8 @@
 
 = 7.6.0 - xxxx-xx-xx =
 * Fix - Clear the `cancelled_email_sent` meta when a subscription is reactivated to allow the customer to receive future cancellation emails.
+* Fix - Prevent deprecation notices after updating to WooCommerce 9.3.
+* Dev - Only initialise the `WCS_WC_Admin_Manager` class on stores running WC 9.2 or older. This class handled integration with the Woo Navigation feature that was removed in WC 9.3.
 
 = 7.5.0 - 2024-09-12 =
 * Dev - Removing the unused method `maybe_remove_formatted_order_total_filter` hooked to `woocommerce_get_formatted_order_total` which was deprecated.
